<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottombar_gradient"

            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp">


            <ImageView
                android:id="@+id/bottom_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/profile_icon" />

            <ImageView
                android:id="@+id/bottom_food"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/food_icon" />

            <ImageView
                android:id="@+id/third_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:clickable="false"
                android:src="@drawable/recordweight_icon" />

            <ImageView
                android:id="@+id/bottom_test"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/reports_icon" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="389dp"
            android:layout_height="649dp"
            android:background="@drawable/maingreyrectangle"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="382dp"
                android:layout_height="623dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/button_addfood"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:background="@drawable/orangebutton"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="@+id/pie_chart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toEndOf="@+id/pie_chart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart"
                    android:layout_width="223dp"
                    android:layout_height="194dp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.755">


                </com.github.mikephil.charting.charts.PieChart>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="323dp"
                    android:layout_height="283dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/foodcontainerstyle"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.461"
                    app:layout_constraintStart_toStartOf="parent">


                    <LinearLayout
                        android:layout_width="319dp"
                        android:layout_height="25dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="food"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="protein"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="fat"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="carbs"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:paddingLeft="15sp"
                            android:paddingRight="10sp"
                            android:text="kcal"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/scrollView2"
                        android:layout_width="310dp"
                        android:layout_height="244dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
